--- a/bars/ts/templates/ts/index.html
+++ b/bars/ts/templates/ts/index.html
@@ -77,6 +77,26 @@
   ul#tab li.active {
   display: block;
   }
+
+  a.theme {
+  display: inline-block;
+  color: #666;
+  background-color: #eee;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 12px;
+  padding: 10px 30px;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border: 1px solid rgba(0,0,0,0.3);
+  border-bottom-width: 3px;
+  }
+  
+  a.theme:hover {
+  background-color: #e3e3e3;
+  border-color: rgba(0,0,0,0.5);
+  }
 	 
 </style>
 <div id="header">
