--- a/bars/ts/templates/ts/index.html
+++ b/bars/ts/templates/ts/index.html
@@ -78,7 +78,7 @@
   display: block;
   }
 
-  a.theme {
+  .theme {
   display: inline-block;
   color: #666;
   background-color: #eee;
@@ -93,7 +93,7 @@
   border-bottom-width: 3px;
   }
   
-  a.theme:hover {
+  .theme:hover {
   background-color: #e3e3e3;
   border-color: rgba(0,0,0,0.5);
   }
