--- a/bars/ts/templates/ts/index.html
+++ b/bars/ts/templates/ts/index.html
@@ -97,7 +97,30 @@
   background-color: #e3e3e3;
   border-color: rgba(0,0,0,0.5);
   }
-	 
+
+  a,button {
+    background:#eee;
+    text-decoration:none;
+    color:#333;
+    font-family:Arial, sans-serif;
+    font-size:11px;
+    font-weight:bold;
+    padding:3px 5px;
+    border:1px solid #aaa;
+    border-radius:3px;
+    cursor:default;
+}
+
+a.button:hover {
+    background-color:#f2f2f2;
+    border-color:#888;
+    box-shadow:0 0 2px #ccc;
+}
+
+a.button:active {
+    vertical-align:-1px;
+}
+  
 </style>
 <div id="header">
 </div>  
