--- a/bars/ts/templates/ts/index.html
+++ b/bars/ts/templates/ts/index.html
@@ -92,6 +92,14 @@
   border: 1px solid rgba(0,0,0,0.3);
   border-bottom-width: 3px;
   }
+
+  .true {
+  color : green;
+  }
+
+  .false {
+  color : red;
+  }
   
   .theme:hover {
   background-color: #e3e3e3;
